Thay đổi việc search job: bỏ dùng query, thay thế bằng thư viện QueryDSL